--- a/uiengineer/project/.eslintrc
+++ b/uiengineer/project/.eslintrc
@@ -3,7 +3,9 @@
   "env": {
     "browser": true,
     "node": true,
-    "mocha": true
+    "mocha": true,
+    "es6": true,
+    "es7": true
   },
   "globals": {
     "expect": true,
@@ -11,6 +13,7 @@
     "__DEV__": true
   },
   "parserOptions": {
+    "ecmaVersion": 6,
     "ecmaFeatures": {
       "arrowFunctions": true,
       "blockBindings": true,
