--- a/uiengineer/project/package.json
+++ b/uiengineer/project/package.json
@@ -17,10 +17,13 @@
   "author": "Oleh Meleshko",
   "license": "MIT",
   "dependencies": {
+    "babel-register": "^6.26.0",
     "connected-react-router": "^6.8.0",
     "file-loader": "^6.1.0",
     "moment": "^2.28.0",
-    "node-sass": "^4.14.1",
+    "node-gyp": "^10.1.0",
+    "node-sass": "^9.0.0",
+    "promise": "^8.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -44,7 +47,7 @@
     "enzyme": "^2.9.1",
     "eslint": "^7.9.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-react": "^5.0.1",
+    "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^4.4.1",
     "json-loader": "^0.5.4",
