--- a/uiengineer/project/streaming-service/package.json
+++ b/uiengineer/project/streaming-service/package.json
@@ -6,9 +6,9 @@
   "dependencies": {
     "cors": "2.8.1",
     "express": "3.21.2",
+    "promise": "^8.3.0",
     "socket.io": "1.5.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
